Agregando quiz_Semana 5 y Actividad semana 6

--- a/Quiz_Semana 5.ipynb
+++ b/Quiz_Semana 5.ipynb
@@ -162,6 +162,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dca2588",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#9 veces."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f0d1a419",
    "metadata": {},
@@ -187,6 +197,15 @@
     "[15,10,12,20,25,13,22] 0 6 pivot = 15\n",
     "...\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1612d8ff",
+   "metadata": {},
+   "source": [
+    "#Salida: \n",
+    "10,12,12,15,20,22,25"
    ]
   },
   {
