--- a/Actividad_Semana6.ipynb
+++ b/Actividad_Semana6.ipynb
@@ -41,10 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "21a779a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monedas utilizadas: [500, 100, 100, 100]\n",
+      "Cantidad total de monedas: 4\n"
+     ]
+    }
+   ],
    "source": [
     "# 1: Un algoritmo voraz toma la mejor decisión local en cada paso con la esperanza de llegar a una solución global óptima.\n",
     "\n",
